Update MainLayout to inject AuthenticationStateProvider and display user avatar conditionally

--- a/GestorTeocratico/Components/Layout/MainLayout.razor
+++ b/GestorTeocratico/Components/Layout/MainLayout.razor
@@ -6,9 +6,11 @@
 @inject ContextMenuService ContextMenuService
 @inject TooltipService TooltipService
 @inject NotificationService NotificationService
+@inject AuthenticationStateProvider AuthenticationStateProvider
 <RadzenComponents />
 
-<RadzenLayout style="grid-template-areas: 'rz-sidebar rz-header' 'rz-sidebar rz-body';">
+@* <RadzenLayout style="grid-template-areas: 'rz-sidebar rz-header' 'rz-sidebar rz-body';"> *@
+<RadzenLayout>
     <RadzenHeader>
         <RadzenRow JustifyContent="JustifyContent.Start" AlignItems="AlignItems.Center" Gap="0">
             <RadzenColumn Size="5">
@@ -19,7 +21,7 @@
                     <RadzenAppearanceToggle />
                     <RadzenProfileMenu>
                         <Template>
-                            <RadzenGravatar Email="user@example.com" />
+                            <RadzenGravatar Email="@_user?.Identity?.Name" Size="32" Alt="User avatar" />
                         </Template>
                         <ChildContent>
                             <RadzenProfileMenuItem Text="Mi Cuenta" Path="/Account/Manage" Icon="account_circle"></RadzenProfileMenuItem>
@@ -40,7 +42,7 @@
             </RadzenColumn>
         </RadzenRow>
     </RadzenBody>
-    <RadzenSidebar @bind-Expanded="@sidebarExpanded" style="z-index: 2">
+    <RadzenSidebar @bind-Expanded="@sidebarExpanded" Style="width: max-content">
         <RadzenStack AlignItems="AlignItems.Center" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding); border-bottom: var(--rz-panel-menu-item-border);">
             <RadzenImage Path="images/logo.png"  style="width: 48px; height: 48px;" AlternateText="Application logo"></RadzenImage>
             <RadzenText Text="Gestor Teocrático" TextStyle="TextStyle.Subtitle1" class="rz-mb-0" style="color: var(--rz-sidebar-color);" />
@@ -54,7 +56,18 @@
 </RadzenLayout>
 
 @code {
-   bool sidebarExpanded = true;
+    bool sidebarExpanded = true;
+    private System.Security.Claims.ClaimsPrincipal? _user;
+
+   protected override async Task OnInitializedAsync()
+   {
+       var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+       _user = authState.User.Identity?.IsAuthenticated == true
+           ? authState.User
+           : null;
+
+        await base.OnInitializedAsync();
+   }
 
    void SidebarToggleClick()
    {
