--- a/GestorTeocratico/Components/_Imports.razor
+++ b/GestorTeocratico/Components/_Imports.razor
@@ -7,8 +7,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
 @using GestorTeocratico
 @using GestorTeocratico.Components
+@using GestorTeocratico.Data
 @using Radzen
 @using Radzen.Blazor
