Add user management features with user details and role assignment dialogs

--- a/GestorTeocratico/Components/Layout/NavMenu.razor
+++ b/GestorTeocratico/Components/Layout/NavMenu.razor
@@ -10,6 +10,7 @@
                 <Authorized Context="adminContext">
                     <RadzenPanelMenu>
                         <RadzenPanelMenuItem Text="Administración" Icon="security">
+                            <RadzenPanelMenuItem Text="Usuarios" Path="/administration/users" Icon="people" />
                             <RadzenPanelMenuItem Text="Roles" Path="/administration/roles" Icon="manage_accounts" />
                         </RadzenPanelMenuItem>
                     </RadzenPanelMenu>
