Add ResendEmailSender service for email confirmation and password reset functionality

--- a/GestorTeocratico/Components/Account/Pages/ConfirmEmail.razor
+++ b/GestorTeocratico/Components/Account/Pages/ConfirmEmail.razor
@@ -19,6 +19,13 @@
                 @statusMessage
             </div>
         }
+        <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center">
+            <RadzenLink Path="/">
+                <RadzenButton Text="Volver al inicio" 
+                              ButtonStyle="ButtonStyle.Primary" 
+                              class="rz-border-radius-2" />
+            </RadzenLink>
+        </RadzenStack>
     </div>
 </div>
 
