Set default return URL to dashboard after 2FA login

--- a/GestorTeocratico/Components/Account/Pages/LoginWith2fa.razor
+++ b/GestorTeocratico/Components/Account/Pages/LoginWith2fa.razor
@@ -71,6 +71,10 @@
 
         if (result.Succeeded)
         {
+            if(ReturnUrl is null || ReturnUrl == "/")
+            {
+                ReturnUrl = "/dashboard";
+            } 
             Logger.LogInformation("User with ID '{UserId}' logged in with 2fa.", userId);
             RedirectManager.RedirectTo(ReturnUrl);
         }
