--- a/GestorTeocratico/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/GestorTeocratico/Components/Account/Shared/ExternalLoginPicker.razor
@@ -41,6 +41,10 @@ else
     protected override async Task OnInitializedAsync()
     {
         externalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToArray();
+        if (string.IsNullOrWhiteSpace(ReturnUrl) || string.IsNullOrEmpty(ReturnUrl))
+        {
+            ReturnUrl = "/dashboard";
+        }
     }
 
 }
