feat: reorganize navigation menu structure for improved accessibility and clarity

--- a/GestorTeocratico/Components/Layout/NavMenu.razor
+++ b/GestorTeocratico/Components/Layout/NavMenu.razor
@@ -13,12 +13,16 @@
                             <RadzenPanelMenuItem Text="Usuarios" Path="/administration/users" Icon="people" />
                             <RadzenPanelMenuItem Text="Roles" Path="/administration/roles" Icon="manage_accounts" />
                         </RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Configuracion" Icon="settings">
+                            <RadzenPanelMenuItem Text="Congregación" Path="/congregations" Icon="fort" />
+                            <RadzenPanelMenuItem Text="Departamentos" Path="/departments" Icon="business" />
+                            <RadzenPanelMenuItem Text="Responsabilidades" Path="/responsibilities" Icon="assignment" />
+                            <RadzenPanelMenuItem Text="Publicadores" Path="/publishers" Icon="people" />
+                        </RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Reuniones" Icon="meeting_room">
+                            <RadzenPanelMenuItem Text="Programación Reuniones" Path="/meeting-schedules" Icon="event_note" />
+                        </RadzenPanelMenuItem>
                     </RadzenPanelMenu>
-                    <RadzenPanelMenuItem Text="Congregación" Path="/congregations" Icon="fort" />
-                    <RadzenPanelMenuItem Text="Departamentos" Path="/departments" Icon="business" />
-                    <RadzenPanelMenuItem Text="Responsabilidades" Path="/responsibilities" Icon="assignment" />
-                    <RadzenPanelMenuItem Text="Publicadores" Path="/publishers" Icon="people" />
-                    <RadzenPanelMenuItem Text="Programación Reuniones" Path="/meeting-schedules" Icon="event_note" />
                 </Authorized>
             </AuthorizeView>
         </RadzenPanelMenu>
