--- a/GestorTeocratico/Components/App.razor
+++ b/GestorTeocratico/Components/App.razor
@@ -8,6 +8,7 @@
     <title>Gestor Teocrático</title>
     <base href="@NavigationManager.BaseUri" />
     <RadzenTheme @rendermode="@PageRenderMode" Theme="material" />
+    <ResourcePreloader/>
     <link rel="stylesheet" href="css/account-pages.css" />
     <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>
@@ -20,7 +21,8 @@
 
 <body>
     <Routes @rendermode="PageRenderMode" />
-    <script src="_framework/blazor.web.js"></script>
+    <ReconnectModal/>
+    <script src="@Assets["_framework/blazor.web.js"]"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Colors).Assembly.GetName().Version)"></script>
 </body>
 
