--- a/GestorTeocratico/Components/Routes.razor
+++ b/GestorTeocratico/Components/Routes.razor
@@ -1,6 +1,6 @@
 ﻿@using GestorTeocratico.Components.Account.Shared
 
-<Router AppAssembly="typeof(Program).Assembly">
+<Router AppAssembly="typeof(Program).Assembly" NotFoundPage="@typeof(Pages.NotFound)">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="@typeof(Layout.MainLayout)">
             <NotAuthorized>
@@ -9,15 +9,4 @@
         </AuthorizeRouteView>
         <FocusOnNavigate RouteData="routeData" Selector="h1"/>
     </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(Layout.MainLayout)">
-            <RadzenRow>
-                <RadzenColumn Size="12" style="margin-top: 5rem; margin-bottom: 5rem">
-                    <RadzenText Text="Page not found" TextStyle="TextStyle.DisplayH1" style="margin: 0; margin-bottom: 2rem" TextAlign="TextAlign.Center" />
-                    <RadzenText Text="Sorry, but there's nothing here!" TextStyle="TextStyle.H6" style="margin: 0" TextAlign="TextAlign.Center" TagName="TagName.P" />
-                </RadzenColumn>
-            </RadzenRow>
-        </LayoutView>
-    </NotFound>
 </Router>
