--- a/GestorTeocratico/Components/_Imports.razor
+++ b/GestorTeocratico/Components/_Imports.razor
@@ -1,16 +1,17 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using GestorTeocratico
+@using GestorTeocratico.Components
+@using GestorTeocratico.Components.Layout
+@using GestorTeocratico.Data
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
-@using GestorTeocratico
-@using GestorTeocratico.Components
-@using GestorTeocratico.Data
 @using Radzen
 @using Radzen.Blazor
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
